# tpCpp

./: .gitignore
lab1/CPPMA-Spring2025-Lab1/: eqDiffSolver.cpp  trace.cxx
lab2/src/: main.cpp  particle.cpp  particle.h  particleCollection.cpp  particleCollection.h
lab3/demo/: plotData.py
lab3/include/: particle.h  univers.h  vecteur.h
lab3/src/: CMakeLists.txt  particle.cpp  particle.h  test_point.cxx  univers.cpp  vecteur.cpp  vecteur.h
lab3/test/: CMakeLists.txt  test_point.cxx  test_univers.cpp
lab4/: CMakeLists.txt  Doxyfile.in  README.md  rapport.tex
lab4/demo/: CMakeLists.txt  collision.cpp  collisionBis.cpp  planetGravity.cpp
lab4/include/: KDTree.h  VTKconverter.hpp  cell.h  cell.hpp  forceType.hpp  limitConditions.h  particle.h  particle.hpp  univers.h  univers.hpp  universKDtree.h  vecteur.hpp
lab4/perf/: CMakeLists.txt  collision.cpp  cutoff_radius_performance.csv  test_perf_CutOffRadius.py  test_perf_VTKfreq.py  vtk_frequency_performance.csv
lab4/src/: CMakeLists.txt  KDTree.cpp  VTKconverter.cpp  cell.cpp  cell.tpp  particle.cpp  particle.tpp  potentielLenardJones.py  univers.cpp  univers.tpp  universKDtree.cpp  vecteur.tpp
lab4/test/: CMakeLists.txt  collision.cpp  collisionKDtree.cpp  perf.data  planetGravity.cpp  test1D.cpp  test2D.cpp  test3D.cpp  testFillUnivers.cpp  testNeighboorCells.cpp  testNeighbourCell.out  testNeighbourCells.cpp  test_particleMovement.cpp  test_univers1.cpp  test_univers2.cpp  test_updateExport.cpp
lab4/test/cell/: CMakeLists.txt  test_cell_add_particle.cpp  test_cell_get_particles.cpp  test_cell_is_empty.cpp  test_cell_show_particles.cpp
lab4/test/particle/: CMakeLists.txt  test_particle_combined_forces.cpp  test_particle_getters.cpp  test_particle_gravity_force.cpp  test_particle_lennard_jones_force.cpp  test_particle_setters.cpp
lab4/test/univers/: CMakeLists.txt  test_univers.cpp  test_univers_add_particle.cpp  test_univers_getters.cpp  test_univers_perf.cpp  test_univers_setters.cpp  test_univers_update.cpp
lab4/test/vecteur/: CMakeLists.txt  old_test_vecteur.cpp  test_constructor.cpp  test_norm.cpp  test_operator_divide.cpp  test_operator_equal.cpp  test_operator_minus.cpp  test_operator_multiply.cpp  test_operator_plus.cpp
